fix margins on mobile

--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -36,7 +36,7 @@
 
 @media (max-width: $lt-width) {
   .content {
-    margin-top: 0rem !important;
+    margin-top: 1rem !important;
   }
 }
 
